adding image banner

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,13 @@
 
 <body>
     <nav>
+       <img src="/images/drone_pilot.jpg">
         <ul>
+            
             <li><a href="/">Home</a></li>
             <li><a href="/blog">Blog</a></li>
             <li><a href="/resource">Resource</a></li>
+            
             
         </ul>
     </nav>
@@ -29,6 +32,7 @@
             <li><a href="mailto:keum.peter@gmail.com">email</a></li>
 
         </ul>
+         
     </footer>
 </body>
 
